se organiza login y register

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@ body {
   justify-content: center;
   color: #fff;
   text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+      justify-content: space-around;
 }
 
 .header h1 {
@@ -125,4 +126,90 @@ body {
 .pagination button[disabled] {
   background-color: #aaa;
   cursor: not-allowed;
+}
+
+nav ul{
+  list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 13px;
+    
+}
+
+nav ul li:hover{
+   transform: translateY(-5px);
+}
+nav ul a{
+   color: #811919;
+   
+}
+
+a{
+  text-decoration: none;
+}
+
+
+
+/*  ------------------------ */
+
+.auth-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.auth-container {
+  background-color: rgba(255, 255, 255, 0.08);
+  padding: 2rem;
+  border-radius: 16px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+  width: 320px;
+  backdrop-filter: blur(12px);
+  color: #fefefe;
+  text-align: center;
+}
+
+.auth-container h2 {
+  margin-bottom: 1.5rem;
+  color: #d36b6b;
+}
+
+.auth-container input {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 1rem;
+  border: none;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.1);
+  color: black;
+}
+
+.auth-container input::placeholder {
+  color: #ddd;
+}
+
+.auth-container button {
+  background-color: #f05a70;
+  border: none;
+  color: white;
+  padding: 12px;
+  width: 100%;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background 0.3s ease;
+}
+
+.auth-container button:hover {
+  background-color: #e6485b;
+}
+
+.auth-container a {
+  color: #fcb6d0;
+  text-decoration: none;
+}
+
+.auth-container a:hover {
+  text-decoration: underline;
 }
