--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,26 @@
+/* // RESET CSS // */
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  outline: none;
+  text-decoration: none;
+  color: currentColor;
+  font-size: 1em;
+  list-style: none;
+}
+
+/* // VARIABLES // */
+:root {
+  --max-width: 1100px;
+}
+
 /* General styles */
+html {
+ font-size: 16px;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -7,85 +29,228 @@ body {
   color: #333;
 }
 
-/* Header with background image */
-.header {
-  background: url(../imgs/background.webp) no-repeat center center/cover;
-  height: 25vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-      justify-content: space-around;
+input, button, textarea {
+  font-size: 1rem;
+  padding: 1rem;
+  border-radius: .5rem;
+  border: 1px solid transparent;
 }
 
-.header h1 {
-  font-size: 2.5rem;
-  margin: 0;
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: .25rem;
+  color: #111;
+  margin-bottom: 1rem;
+}
+
+.input-wrapper label {
+  text-align: left;
+}
+
+.input-wrapper input {
+  border-color: #ccc;
+}
+
+/* Header with background image */
+.header {
+  background: #111;
+  color: #fff;
+  position: relative;
+  padding: 1rem 2rem;
+}
+
+.header-wrapper {
+  display: flex;
+  margin: 0 auto;
+  max-width: var(--max-width);
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header .header-wrapper h1 {
+  font-size: 1.5rem;
+}
+
+.header .header-wrapper nav {
+  display: flex;
+  align-items: center;
+}
+
+nav ul{
+  display: flex;
+  gap: .25rem;
+}
+
+.header .header-wrapper a {
+  color: #fff;
+  padding: .75rem 1rem;
+  display: flex;
+  text-align: center;
+  border-radius: .25rem;
+  transition: .2s ease all;
+}
+
+.header .header-wrapper a:hover {
+  background: #333;
+}
+
+/* /// MAIN /// */
+
+main {
+  min-height: 100dvh;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+
+main > * {
+  margin: 0 auto;
+  width: 100%;
+  max-width: var(--max-width);
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 1rem;
+  width: 100%;
+  max-width: initial;
+  padding: .5rem 2rem;
 }
 
-/* Search bar */
-.search-bar {
+.container > * {
+  max-width: var(--max-width);
+  margin: 0 auto;
+}
+
+/* // SEARCH // */
+
+.search {
+  --search-br: 1rem;
+  position: relative;
   display: flex;
-  gap: 10px;
-  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  border-radius: .5rem;
+  display: flex;
+  max-width: initial;
+  padding: 1rem 2rem;
+  flex-direction: column;
+  height: 100%;
+  max-height: 50dvh;
+  flex: 1;
+  transition: .2s ease all;
+}
+
+.search h1 {
+  position: relative;
+  color: #fff;
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.search.searched {
+  max-height: 144px;
+}
+
+.search-background {
+  position: absolute;
+  inset: 0;
+  overflow: hidden;
+}
+
+.search-background::before{
+  content: '';
+  position: absolute;
+  background-image: url(../imgs/background.webp);
+  inset: 0;
+  background-size: cover;
+  background-position: center;
+}
+
+.search-background::after{
+  background: rgba(0, 0, 0, .75);
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-size: cover;
+  background-position: center;
+}
+
+.search-bar {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  border-radius: var(--search-br);
+  min-height: 7rem;
+  max-width: calc(var(--max-width) - 300px);
 }
 
 .search-bar input {
   flex: 1;
-  padding: 12px;
-  font-size: 16px;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: calc(var(--search-br) / 1.5);
 }
 
 .search-bar button {
-  padding: 10px 15px;
-  font-size: 16px;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px;
-  background-color: #333;
-  color: #fff;
-  transition: background-color 0.3s;
+  border-radius: calc(var(--search-br) / 1.5);
+  background-color: #FFF;
+  color: #111;
 }
 
 .search-bar button:hover {
-  background-color: #555;
+  background-color: #eee;
+}
+
+.search-suggest {
+  position: relative;
+  width: 100%;
+  background: #fff;
+  border-radius: var(--search-br);
 }
 
 /* Results section */
 .results {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+  gap: 1rem;
   margin-top: 30px;
+  max-width: calc(var(--max-width) + 1rem);
+
 }
 
 /* Book card */
 .book-card {
-  background: #fff;
   border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  padding: 15px;
   text-align: center;
-  transition: transform 0.3s;
+  display: flex;
+  flex-direction: column;
+  transition: 0.2s ease all;
+  outline: 1px solid transparent;
+  padding: .5rem;
 }
 
 .book-card:hover {
-  transform: translateY(-5px);
+  background: #fff;
+  outline-color: #ddd;
+}
+
+.book-card .book-cover {
+  padding: 1rem;
+  width: 100%;
+  aspect-ratio: 9 / 14;
+  border-radius: .5rem;
+  overflow: hidden;
+  background: #fff;
+  position: relative;
 }
 
 .book-card img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 5px;
+  position: absolute;
+  width: 100%;
+  inset: 0;
+  height: 100%;
+  object-fit: cover;
 }
 
 .book-card h3 {
@@ -128,28 +293,6 @@ body {
   cursor: not-allowed;
 }
 
-nav ul{
-  list-style: none;
-    display: flex;
-    flex-direction: row;
-    gap: 13px;
-    
-}
-
-nav ul li:hover{
-   transform: translateY(-5px);
-}
-nav ul a{
-   color: #811919;
-   
-}
-
-a{
-  text-decoration: none;
-}
-
-
-
 /*  ------------------------ */
 
 .auth-section {
@@ -173,20 +316,6 @@ a{
 .auth-container h2 {
   margin-bottom: 1.5rem;
   color: #d36b6b;
-}
-
-.auth-container input {
-  width: 100%;
-  padding: 12px;
-  margin-bottom: 1rem;
-  border: none;
-  border-radius: 8px;
-  background: rgba(255, 255, 255, 0.1);
-  color: black;
-}
-
-.auth-container input::placeholder {
-  color: #ddd;
 }
 
 .auth-container button {
